syntax = "proto3";

package auth;

option go_package = "reforest/pkg/pb";

service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message User {
  string id = 1;
  string email = 2;
  string role_type = 3;
}

message Profile {
  string id = 1;
  string full_name = 2;
  string date_of_birth = 3;
  int32 age = 4;
  int32 balance = 5;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string role_type = 3;
  string full_name = 4;
  string date_of_birth = 5;
}

message RegisterResponse {
  string message = 1;
  string user_id = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string role = 2;
}